# raman-spectral-classifier

./: .gitignore  AGENT_HANDOFF.md  CITATION.cff  LICENSE  PROJECT_STATUS.md  README.md  conftest.py  implementation_plan.md  pyproject.toml  requirements.txt
app/: api.py
artifacts/xai/: README.md
docs/: dataset.md  domain_robustness_changes.md  evaluation.md  project_structure.md  system_audit_changes.md  training.md  xai.md
metadata/: __init__.py  clinical.py  helpers.py  isolates.py  ontology.py  patient_ids.py  tasks.py  treatments.py
notebooks/: 00_getting_started.ipynb  01_data_understanding.ipynb  01_dataset_exploration.ipynb  02_domain_analysis.ipynb  02_domain_analysis_complete.ipynb  02_preprocessing_qc.ipynb  02_train_and_evaluate.ipynb  03_explainability.ipynb  03_full_pipeline_results.ipynb  04_interpretability.ipynb  05_results_analysis.ipynb  06_all_data_analysis.ipynb  colab_run_finetune.py  dataset_overview.ipynb  failure_forensics.ipynb  shift_investigation.ipynb  verify_labels.ipynb
scripts/: _build_experiment_config.py  _deprecated_compare_models.py  _deprecated_generate_all_plots.py  _deprecated_plots.py  aggregate_folds.py  analyze_experiment.py  compare_models.py  compare_models_xai.py  embedding_analysis.py  evaluate.py  generate_all_plots.py  generate_research_plots.py  gradcam.py  lime_explain.py  plot_saliency.py  plots.py  run_ablation.py  run_patient_cv.py  setup_data.py  train.py  xai.py
tests/: test_cbam_resnet1d.py  test_cnn_transformer.py  test_data_layer.py  test_lime.py  test_pipeline_regressions.py  test_two_stage_pipeline.py
(+125 files in other folders)
